--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.0.0",
+    "font-awesome": "^4.7.0",
     "immutable": "^3.8.2",
     "libphonenumber-js": "^1.0.24",
     "lodash": "^4.17.5",
