--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,7 +1,10 @@
 env:
   browser: true
   es6: true
-extends: 'eslint:recommended'
+  node: true
+extends:
+  - 'eslint:recommended'
+  - 'plugin:react/recommended'
 parserOptions:
   ecmaFeatures:
     experimentalObjectRestSpread: true
