--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
+    "server": "json-server --watch db.json --port 3000",
+    "eslint": "./node_modules/.bin/eslint src --quiet",
     "build": "react-scripts build",
     "test": "mocha --require babel-core/register --require ./test/test_helper.js",
     "eject": "react-scripts eject",
